--- a/index.html
+++ b/index.html
@@ -8,17 +8,23 @@
     </head>
     <body>
         <section class="top-page">
+            <div>
+                <nav>
+                <!-- <img src="images/seflogo.PNG"> -->
+                </nav>
+            </div>
             <div class="left">
-                <h1>
-                    <span class="desire">want to become a</span>
-                    <br>
-                    <span class="soft">software engineer?_</span>
-                </h1>
-                <p>Jumpstart your journey in tech with our courses in Computer Science, 
-                    Full-Stack Web development, Data Engineering and UI/UX Design. 
-                    Get hands-on experience and gain essential skills for a successful tech career.</p>
-                <a href="#" class="get-trained">#GET_TRAINED</a>
-                
+                    <h1>
+                        <span class="desire">want to become a</span>
+                        <br>
+                        <span class="soft">software engineer?_</span>
+                    </h1>
+                    <div class="talented-description">
+                        <p>Jumpstart your journey in tech with our courses in Computer Science, 
+                        Full-Stack Web development, Data Engineering and UI/UX Design. 
+                        Get hands-on experience and gain essential skills for a successful tech career.</p>
+                    </div>
+                    <a href="#" class="get-trained">#GET_TRAINED</a>   
             </div>
             <div class="right">
                 <h1>
@@ -26,12 +32,16 @@
                     <br>
                     <span class="soft">job_ready tech talent?</span>
                 </h1>
-                <br>
-                <p>Look no further than our comprehensive talent matching and placement services! 
+                <div class="hiring-desrciption">
+                    <p>Look no further than our comprehensive talent matching and placement services! 
                     Our expert team will connect you with highly trained and skilled developers 
                     who are ready to hit the ground running and drive your success.</p>
+                </div>
                 <a href="#" class="get-hired">#Hire_talent</a>
             </div>
+        </section>
+        <section>
+            
         </section>
     </body>
 </html>
