add body of the second page

--- a/index.html
+++ b/index.html
@@ -41,7 +41,33 @@
             </div>
         </section>
         <section>
-            
+            <div class="section2">
+                <div class="top">
+                    <div>
+                        <img class="greater-than" src="images/greater-than.PNG">
+                    </div>
+                    <div class="Hello">
+                        <p><b>Hello world!</b></p>
+                    </div>
+                    <div class="circles">
+                        <div><img src="images/circle1.PNG"></div>
+                        <div><img src="images/circle2.PNG"></div>
+                        <div><img src="images/circle3.PNG"></div>
+                    </div>
+                </div>
+                <div class="body-section2">
+                    <div class="black-window">
+                        
+                    </div>
+                </div>
         </section>
     </body>
 </html>
+
+<!-- @media (max-width: 800px){ -->
+    <!-- //code for small screen -->
+<!-- }
+
+@media (min-width:800px) {
+ //code for large screen
+} -->
