finish second page

--- a/index.html
+++ b/index.html
@@ -57,9 +57,29 @@
                 </div>
                 <div class="body-section2">
                     <div class="black-window">
-                        
+                        <div class="black-window-bar">
+                            <img class="window-logo"src="images/seflogo1.jpg">
+                            <p>  Mohammad Atout | FSW 21-22</p>
+                            <div class="features">
+                                <div class="watch">
+                                    <img src="images/watchlater.PNG">
+                                    <p>Watch later</p>
+                                </div>
+                                <div>
+                                    <img src="images/share.PNG">
+                                    <p>Share</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div calss="black-window-botton-bar">
+                            <div class="first-part">
+                                <div><img class="play" src="images/play.jpg"></div>
+                                <div><img class="volume" src="images/volume.png"></div></div>
+                                <p>0:00/0:00</p>
+                            <div></div><div></div><div></div><div></div>
                     </div>
                 </div>
+            </div>
         </section>
     </body>
 </html>
