--- a/index.html
+++ b/index.html
@@ -81,6 +81,31 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="section3">
+                <div class="section-top">
+                    <div class="first-part"> 
+                        <div>
+                            <img src="images/greater-than.PNG">
+                        </div>
+                        <div class="Milstones">
+                            <p>Milstones</p>
+                        </div>
+                    </div>
+                    <div class="circles">
+                        <div><img src="images/circle1.PNG"></div>
+                        <div><img src="images/circle2.PNG"></div>
+                        <div><img src="images/circle3.PNG"></div>
+                    </div>
+                </div>
+                <div class="big-rectangle">
+                    <div class="rectangle"></div>
+                    <div class="rectangle"></div>
+                    <div class="rectangle"></div>
+                    <div class="rectangle"></div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
 
