--- a/index.html
+++ b/index.html
@@ -98,11 +98,29 @@
                         <div><img src="images/circle3.PNG"></div>
                     </div>
                 </div>
-                <div class="big-rectangle">
-                    <div class="rectangle"></div>
-                    <div class="rectangle"></div>
-                    <div class="rectangle"></div>
-                    <div class="rectangle"></div>
+                <div class="rectangles">
+                    <div class="big-rectangle">
+                        90%
+                    </div>
+                    <div class="small-rectangles">
+                        <div class="first-two-rectangles">
+                            <div class="rectangle1">
+                                <p>1,000+</p>
+                                <p>youth trained since 2016</p>
+                            </div>
+                            <div class="rectangle2">
+                                <p>10+</p>
+                                <p>hiring countries</p>
+                            </div>
+                        </div>
+                        <div class="second-two-rectangles">
+                            <div class="rectangle3">
+                                <p>300+</p>
+                                <p>graduated Full-Stack web developers</p>
+                            </div>
+                            <div class="rectangle4"><p>global recruiment partner companies</p></div>
+                        </div>  
+                    </div>
                 </div>
             </div>
         </section>
