style second page

--- a/index.html
+++ b/index.html
@@ -100,25 +100,36 @@
                 </div>
                 <div class="rectangles">
                     <div class="big-rectangle">
-                        90%
+                        <div class="percent"><p>90%</p></div>
+                        <div><p>employment success rate</p></div>
+                        <div class="list">
+                            <ul>
+                                <li>-Supported the employment of 250+ youth</li>
+                                <li>-50% working remotely from lebanon</li>
+                                <li>-Average salary today 1,300$</lli>
+                            </ul>
+                        </div>
                     </div>
                     <div class="small-rectangles">
                         <div class="first-two-rectangles">
                             <div class="rectangle1">
-                                <p>1,000+</p>
-                                <p>youth trained since 2016</p>
+                                <div class="percent"><p>1,000+</p></div>
+                                <div><p>youth trained since 2016</p></div>
                             </div>
                             <div class="rectangle2">
-                                <p>10+</p>
-                                <p>hiring countries</p>
+                                <div class="percent"><p>10+</p></div>
+                                <div><p>hiring countries</p></div>
                             </div>
                         </div>
                         <div class="second-two-rectangles">
                             <div class="rectangle3">
-                                <p>300+</p>
-                                <p>graduated Full-Stack web developers</p>
+                                <div class="percent"><p>300+</p></div>
+                                <div class="text"><p>graduated Full-Stack web developers</p></div>
                             </div>
-                            <div class="rectangle4"><p>global recruiment partner companies</p></div>
+                            <div class="rectangle4">
+                                <div class="percent"><p>220+</p></div>
+                                <div><p>global recruiment partner companies</p></div>
+                            </div>
                         </div>  
                     </div>
                 </div>
