--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 </div>
                 <div class ="section5-body">
                     <div><span class="Partner"><b>Become a Recruiment Partner</b></span></div>
-                    <div><span>220+ companies from over 10 countries have joined our network since 2016</span></div>
+                    <div class="another-color"><span>220+ companies from over 10 countries have joined our network since 2016</span></div>
                     <ol>
                         <li>Exclusive, direct, and streamlined access to our graduating cycles</li>
                         <li>Candidate insights from instructors and personalized recommendations</li>
@@ -170,6 +170,15 @@
                         <li>Tech talks participation and engagement with students opportunities</li>
                     </ol>
                     <div><span>Are you on the hunt for exceptional rising junior developers? Look no further than SE Factory!</span></div>
+                    <br>
+                    <div class="contact">
+                        <span><b>CONTACT US > </b></span>
+                    </div>
+                </div>
+                <br>
+                <div class="HR">
+                    <span>Want to launch a local team?    checkout      </span>
+                    <img src="images/hrf.PNG">
                 </div>
             </div>
         </section>
