--- a/index.html
+++ b/index.html
@@ -177,9 +177,39 @@
                 </div>
                 <br>
                 <div class="HR">
-                    <span>Want to launch a local team?    checkout      </span>
+                    <span>Want to launch a local team?    checkout </span>
                     <img src="images/hrf.PNG">
                 </div>
+            </div>
+        </section>
+        <section>
+            <div class="section6">
+                <div class="section6-top">
+                    <div><img src="images/greater-than.PNG"></div>
+                    <div><span class="testimonials">Testimonials</span></div>
+                    <div class="circles">
+                        <div><img src="images/circle1.PNG"></div>
+                        <div><img src="images/circle2.PNG"></div>
+                        <div><img src="images/circle3.PNG"></div>
+                    </div>
+                </div>
+                <div class="section6-body">
+                    <div class="section6-first-half">
+                        <div><img class="qoutes" src="images/qoutes.PNG" alt="quote-icon"></div>
+                        <div class="qoute">Our business is expanding thanks to talented and dedicated team members
+                            that we hired through SE Factory. Looking forward to hiring more developers
+                            from them as we grow.
+                        </div>
+                        <div class="info">
+                            <div><img class="tiny-image" src="images/person.jpeg"></div>
+                            <div>
+                                <p>Rabih Chaar</p>
+                                <p>> UAE, Nadeera</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="section6-second-half"><img class="person" src="images/person.jpeg"></div>
+                </div>    
             </div>
         </section>
     </body>
