--- a/index.html
+++ b/index.html
@@ -209,7 +209,18 @@
                         </div>
                     </div>
                     <div class="section6-second-half"><img class="person" src="images/person.jpeg"></div>
+                </div>
+                <div class="small-circles">
+                    <div class="small-circle"></div>
+                    <div class="small-circle"></div>
+                    <div class="small-circle"></div>
+                    <div class="small-circle"></div>
                 </div>    
+            </div>
+        </section>
+        <section>
+            <div class="section7">
+                <div class="section7-body"></div>
             </div>
         </section>
     </body>
