add section7 top

--- a/index.html
+++ b/index.html
@@ -220,7 +220,18 @@
         </section>
         <section>
             <div class="section7">
-                <div class="section7-body"></div>
+                <div class="section7-top">
+                    <div><span class="green">></span>
+                    <span><b>FAQs</b></span></div>
+                    <div class="colored-circles">
+                        <div class="white-circle"></div>
+                        <div class="grey-circle"></div>                    
+                        <div class="green-circle"></div>
+                    </div>
+                </div>
+                <div class="section7-body">
+
+                </div>
             </div>
         </section>
     </body>
