--- a/index.html
+++ b/index.html
@@ -230,7 +230,23 @@
                     </div>
                 </div>
                 <div class="section7-body">
-
+                    <div class="first-div-t">
+                        <div><span class="green">></span></div>
+                        <div><span class="f-texts">What is the Difference Between the FSW & the FCS Program?</span></div>
+                    </div>
+                    <div class="second-div-t">
+                        <div><span class="green">></span></div>
+                        <div><span class="f-texts">Where do I apply?</span></div>
+                    </div>
+                    <div class="third-div-t"> 
+                        <div>
+                            <div><span class="green">></span></div>
+                        </div>
+                        <div ><span class="f-texts">What programs do you offer?</span></div>
+                    </div>
+                    <div class="forth-div-t">
+                        <span class="f-texts">View All > </span>
+                    </div>
                 </div>
             </div>
         </section>
