add colored circles

--- a/index.html
+++ b/index.html
@@ -250,6 +250,21 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="section8">
+                <div class="section8-top">
+                    <div>
+                        <span class="green">></span>
+                        <span><b>Contact us</b></span>
+                    </div>
+                    <div class="colored-circles">
+                        <div class="white-circle"></div>
+                        <div class="grey-circle"></div> 
+                        <div calss="black-circle"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
 
