--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             <div class="section7">
                 <div class="section7-top">
                     <div><span class="green">></span>
-                    <span><b>FAQs</b></span></div>
+                    <span class="f-texts"><b>FAQs</b></span></div>
                     <div class="colored-circles">
                         <div class="white-circle"></div>
                         <div class="grey-circle"></div>                    
@@ -253,14 +253,14 @@
         <section>
             <div class="section8">
                 <div class="section8-top">
-                    <div>
+                    <div class="section8-top-1half">
                         <span class="green">></span>
-                        <span><b>Contact us</b></span>
+                        <span class="f-texts"><b>Contact us</b></span>
                     </div>
                     <div class="colored-circles">
                         <div class="white-circle"></div>
                         <div class="grey-circle"></div> 
-                        <div calss="black-circle"></div>
+                        <div calss="black-circle-i"></div>
                     </div>
                 </div>
             </div>
