--- a/index.html
+++ b/index.html
@@ -263,6 +263,41 @@
                         <div calss="black-circle-i"></div>
                     </div>
                 </div>
+                <div class="section8-body">
+                    <div>
+                        <div class="map-rectangle">
+                            <div class="map-rectangle-top">
+                                <span class="f-texts ">></span>
+                                <span class="f-texts">Get directions</span>
+                            </div>
+                            <div class="map">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d3311.943109144391!2d35.505992000000006!3d33.891119!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1688922709188!5m2!1sen!2sus" 
+                                width="250" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            </div>
+                            <div class="map-rectangle-feed">
+                                <span class="f-texts">// SE Factory</span>
+                                <br>
+                                <span class="f-texts weight">
+                                    Beirut Digital District<br>
+                                    BDD 1243<br>
+                                    Basement (Floor -1)</span>
+                            </div>
+                        </div>
+                        <div class="form-rectangle">
+                            <div>
+                                <span>></span>
+                                <span class="f-texts">Contact form</span>
+                            </div>
+                            <di><span>info@sefactory.io</span></di>
+                            <div>
+                                <div>
+                                    <span class="f-texts">// first name</span>
+                                    <input placeholder="First name">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </body>
