--- a/index.html
+++ b/index.html
@@ -264,7 +264,6 @@
                     </div>
                 </div>
                 <div class="section8-body">
-                    <div>
                         <div class="map-rectangle">
                             <div class="map-rectangle-top">
                                 <span class="f-texts ">></span>
@@ -284,19 +283,56 @@
                             </div>
                         </div>
                         <div class="form-rectangle">
-                            <div>
-                                <span>></span>
+                            <div class="form-top">
+                                <span class="f-texts">></span>
                                 <span class="f-texts">Contact form</span>
                             </div>
-                            <di><span>info@sefactory.io</span></di>
-                            <div>
-                                <div>
+                            <div class="gmail"><span class="green gmail"><b>info@sefactory.io</b></span></di>
+                            <div class="full-name">
+                                <div class="first-name">
                                     <span class="f-texts">// first name</span>
-                                    <input placeholder="First name">
+                                    <input class="input-info" placeholder="First name">
+                                </div>
+                                <div class="last-name">
+                                    <span class="f-texts">// last name</span>
+                                    <input class="input-info" placeholder="Last name">
                                 </div>
                             </div>
+                            <div class="em-nu">
+                                <div class="email">
+                                    <span class="f-texts">// email</span>
+                                    <input class="input-info" placeholder="Email">
+                                </div>
+                                <div class="phone-no">
+                                    <span class="f-texts">// phone number</span>
+                                    <input class="input-info" placeholder="Phone number">
+                                </div>
+                            </div>
+                            <div class="help">
+                                <div><span class="f-texts">// what can we help you with?</span></div>
+                                <div class="options">
+                                    <input type="checkbox" class="checkbox">
+                                    <span class="f-texts">FCS</span>
+                                    <input type="checkbox" class="checkbox">
+                                    <span class="f-texts">FSW</span>
+                                    <input type="checkbox" class="checkbox">
+                                    <span class="f-texts">FSD</span>
+                                    <input type="checkbox" class="checkbox">
+                                    <span class="f-texts">UIX</span>
+                                    <input type="checkbox" class="checkbox">
+                                    <span class="f-texts">Hire Talent</span>
+                                    <input type="checkbox" class="checkbox">
+                                    <span class="f-texts">Other</span>
+                                </div>
+                            </div>
+                            <div class="for-help-option">
+                                <span class="f-texts">// inquiry</span>
+                                <input class="for-help" placeholder="what can we help you with?" >
+                            </div>
+                            <div class="submit-button">
+                                <a class="submit">Submit</a>
+                            </div>
                         </div>
-                    </div>
                 </div>
             </div>
         </section>
