add footer images

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                     <div class="colored-circles">
                         <div class="white-circle"></div>
                         <div class="grey-circle"></div> 
-                        <div calss="black-circle-i"></div>
+                        <div calss="black-circle"></div>
                     </div>
                 </div>
                 <div class="section8-body">
@@ -333,6 +333,21 @@
                                 <a class="submit">Submit</a>
                             </div>
                         </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="section9">
+                <div class="section9-top">
+                    <div class="section-top-1half">
+                        <span class="green">></span>
+                        <span><b>Partners</b></span>
+                    </div>
+                    <div class="circles">
+                        <div class="black-circle"></div>
+                        <div class="grey-circle"></div>
+                        <div class="green-circle"></div>
+                    </div>
                 </div>
             </div>
         </section>
