--- a/index.html
+++ b/index.html
@@ -341,13 +341,29 @@
                 <div class="section9-top">
                     <div class="section-top-1half">
                         <span class="green">></span>
-                        <span><b>Partners</b></span>
+                        <span class="partners"><b>Partners</b></span>
                     </div>
                     <div class="circles">
                         <div class="black-circle"></div>
                         <div class="grey-circle"></div>
                         <div class="green-circle"></div>
                     </div>
+                </div>
+                <div class="images-first-row">
+                    <img class="i-rows" src="images/img1.png">
+                    <img class="i-rows" src="images/img2.png">
+                    <img class="i-rows" src="images/img3.png">
+                    <img class="i-rows" src="images/img4.png">
+                    <img class="i-rows" src="images/img5.png">
+                    <img class="i-rows" src="images/img6.png">
+                </div>
+                <div class="images-secod-row">
+                    <img class="i-rows" src="images/img7.png">
+                    <img class="i-rows" src="images/img8.png">
+                    <img class="i-rows" src="images/img9.png">
+                    <img class="i-rows" src="images/img10.png">
+                    <img class="i-rows" src="images/img11.png">
+                    <img class="i-rows" src="images/img12.png">
                 </div>
             </div>
         </section>
