--- a/index.html
+++ b/index.html
@@ -42,17 +42,20 @@
         </section>
         <section>
             <div class="section2">
-                <div class="top">
-                    <div>
-                        <img class="greater-than" src="images/greater-than.PNG">
+                <div class="section2-top">
+                    <div class="section2-1half">
+                        <div>
+                            <span class="green greater-than">></span>
+                        </div>
+                        <div class="Hello">
+                            <p><b>Hello world!</b></p>
+                        </div> 
                     </div>
-                    <div class="Hello">
-                        <p><b>Hello world!</b></p>
-                    </div>
-                    <div class="circles">
-                        <div><img src="images/circle1.PNG"></div>
-                        <div><img src="images/circle2.PNG"></div>
-                        <div><img src="images/circle3.PNG"></div>
+                    
+                    <div class="section2-2half colored-circles">
+                        <div class="black-circle"></div>
+                        <div class="grey-circle"></div>
+                        <div class="green-circle"></div>
                     </div>
                 </div>
                 <div class="body-section2">
@@ -63,11 +66,11 @@
                             <div class="features">
                                 <div class="watch">
                                     <img src="images/watchlater.PNG">
-                                    <p>Watch later</p>
+                                    <span class="margin f-texts">Watch later</span>
                                 </div>
                                 <div>
                                     <img src="images/share.PNG">
-                                    <p>Share</p>
+                                    <span class="margin f-texts">Share</spa>
                                 </div>
                             </div>
                         </div>
@@ -75,7 +78,7 @@
                             <div class="first-part">
                                 <div><img class="play" src="images/play.jpg"></div>
                                 <div><img class="volume" src="images/volume.png"></div></div>
-                                <p>0:00/0:00</p>
+                                <span class="f-texts">0:00/0:00</span>
                             <div></div><div></div><div></div><div></div>
                     </div>
                 </div>
@@ -83,19 +86,19 @@
         </section>
         <section>
             <div class="section3">
-                <div class="section-top">
-                    <div class="first-part"> 
+                <div class="section3-top">
+                    <div class="section3-1half"> 
                         <div>
-                            <img src="images/greater-than.PNG">
+                            <span class="green">></span>
                         </div>
                         <div class="Milstones">
                             <p>Milstones</p>
                         </div>
                     </div>
-                    <div class="circles">
-                        <div><img src="images/circle1.PNG"></div>
-                        <div><img src="images/circle2.PNG"></div>
-                        <div><img src="images/circle3.PNG"></div>
+                    <div class="section3-2half colored-circles">
+                        <div class="black-circle"></div>
+                        <div class="grey-circle"></div>
+                        <div class="green-circle"></div>
                     </div>
                 </div>
                 <div class="rectangles">
@@ -145,19 +148,17 @@
         </section> -->
         <section>
             <div class="section5">
-                <div class="section5-top">
-                    <div>
-                        <span class="greater"> > </span>
+                <div class="section5-top">                        
+                    <div class="section6-1half">
+                        <div><span class="green"><b>></b></span></div>
+                        <div><span class="f-texts testimonials">Hire talent</span></div>
                     </div>
-                    <div class="Hire-talent">
-                        <span>
-                            Hire talent
-                        </span>
-                    </div>
-                    <div class="circles">
-                        <div><img src="images/circle1.PNG"></div>
-                        <div><img src="images/circle2.PNG"></div>
-                        <div><img src="images/circle3.PNG"></div>
+                    <div class="second-half">
+                        <div class="colored-circles">
+                            <div class="black-circle"></div>
+                            <div class="grey-circle"></div>
+                            <div class="green-circle"></div>
+                        </div>
                     </div>
                 </div>
                 <div class ="section5-body">
@@ -185,12 +186,14 @@
         <section>
             <div class="section6">
                 <div class="section6-top">
-                    <div><img src="images/greater-than.PNG"></div>
-                    <div><span class="testimonials">Testimonials</span></div>
-                    <div class="circles">
-                        <div><img src="images/circle1.PNG"></div>
-                        <div><img src="images/circle2.PNG"></div>
-                        <div><img src="images/circle3.PNG"></div>
+                    <div class="section6-1half">
+                        <div><span class="green"><b>></b></span></div>
+                        <div><span class="testimonials">Testimonials</span></div>
+                    </div>
+                    <div class="colored-circles">
+                        <div class="black-circle"></div>
+                        <div class="grey-circle"></div>
+                        <div class="green-circle"></div>
                     </div>
                 </div>
                 <div class="section6-body">
@@ -203,8 +206,8 @@
                         <div class="info">
                             <div><img class="tiny-image" src="images/person.jpeg"></div>
                             <div>
-                                <p>Rabih Chaar</p>
-                                <p>> UAE, Nadeera</p>
+                                <p><span class="green">Rabih</span> Chaar</p>
+                                <p>> UAE, <span class="green">Nadeera</span> </p>
                             </div>
                         </div>
                     </div>
@@ -254,8 +257,8 @@
             <div class="section8">
                 <div class="section8-top">
                     <div class="section8-top-1half">
-                        <span class="green">></span>
-                        <span class="f-texts"><b>Contact us</b></span>
+                        <span class="green contact-us">></span>
+                        <span class="f-texts contact-us"><b>Contact us</b></span>
                     </div>
                     <div class="colored-circles">
                         <div class="white-circle"></div>
@@ -364,6 +367,60 @@
                     <img class="i-rows" src="images/img10.png">
                     <img class="i-rows" src="images/img11.png">
                     <img class="i-rows" src="images/img12.png">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="section10">
+                <div class="section10-top">
+                    <div class="section10-1half">
+                        <span class="f-texts"><b>Subscribe to our <span class="green">newsletter<span></b></span>
+                        <span class="f-texts">and stay up-to-date with our latest news.</span>
+                    </div>
+                    <div class="section10-2half">
+                        <input class="subscribe-email" placeholder="Enter your email">
+                        <a class="subscribe f-texts">SUBSCRIBE</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="section11">
+                <div class="first-block">
+                    <div class="first-block-home"><span class="home f-texts"><b>SE FACTORY</b></span></div>
+                    <br>
+                    <div><span class="home f-texts">Home</span></div>
+                    <div class="table">
+                        <table class="f-texts">
+                            <tr>
+                                <th>Hello world!</th>
+                                <th>FAQs</th>
+                            </tr>
+                            <br>
+                            <tr>
+                                <th>Milestones</th>
+                                <th>Testimonials</th>
+                            </tr>
+                            <br>
+                            <tr>
+                                <th>Programs</th>
+                                <th>Contact us</th>
+                            </tr>
+                            <br>
+                            <tr>
+                                <th>Hire Talent</th>
+                                <th>Partners</th>
+                            </tr>
+                        </table>
+                    </div>
+                    <div>
+                        <span class="f-texts rights">© 2023 SE Factory SAL. All rights reserved.</span>
+                    </div>
+                </div>
+                <div class="div-second-block">
+                    <div><img class="sef-logo1" src="images/seflogo1.jpg"></div>
+                    <div><img class="social" src="images/social.PNG"></div>
+                    <div class="f-texts">Privacy policy</div>
                 </div>
             </div>
         </section>
